--- a/brands/brands.html
+++ b/brands/brands.html
@@ -214,7 +214,7 @@
         <div>J</div>
         <div>K</div>
         <div>L</div>
-        <div> <a href="#comingFromM">M</a></div>
+        <div>M</div>
         <div>N</div>
         <div>O</div>
         <div>P</div>
@@ -514,7 +514,7 @@
         </div>
     </div>
 
-    <div class="container2 new" id="comingFromM">
+    <div class="container2 new">
         <h1 class="box0">L</h1>
         <div class="box1" id="backColorAplhaNames">
             <span><a href="">L'Occitane</a></span>
@@ -1026,13 +1026,13 @@ function logoutcurrentuser() {
     });
 }
 
-<script>
+
     document.querySelector(".goToHomepage").addEventListener("click", goToHomepage);
 
 function goToHomepage() {
     window.location.href="../index.html"
 }
-</script>
+
 
 
 
