update some link part

--- a/cart/cart.html
+++ b/cart/cart.html
@@ -179,9 +179,9 @@
             <div id="third">
                 <div id="thirdInneer">
                     <div id="brand-link">Brands</div>
-                    <div>Anniversary Edit</div>
-                    <div id="brand-link">Sale</div>
-                    <div class="BAR">
+                    <div id="link-anni">Anniversary Edit</div>
+                    <div id="link-sale">Sale</div>
+                    <div class="BAR" id="buildroutine">
                         Build a Routine
                         <div class="drop">
                             <div class="outside">
@@ -390,7 +390,7 @@
                         </div>
                     </div>
                     <div class="BAR">
-                        Tools
+                        <p>Tools</p>
                         <div class="drop">
                             <div class="outsideTools">
                                 <div class="inside">
@@ -406,7 +406,7 @@
                                     <div><a href="">Hair Brushes </a></div>
                                 </div>
                                 <div class="inside">
-                                    <div><a href="">Skincare </a></div>
+                                    <div><a href="" id="skincare">Skincare </a></div>
                                     <div><a href="">LED Light Therapy </a></div>
                                     <div><a href="">Facial Toning </a></div>
                                     <div><a href="">Cleansing </a></div>
@@ -415,11 +415,12 @@
                             </div>
                         </div>
                     </div>
-                    <div>Bath & Body</div>
-                    <div>Self-Care</div>
-                    <div>Fragrance</div>
-                    <div>New</div>
-                    <div>Advice</div>
+                    <div id="bodyandbath">Bath & Body</div>
+                    <div id="skincare">Self-Care</div>
+                    <div id="fragrance">Fragrance</div>
+                    <div id="newlink">New</div>
+                    <div id="adivcelink">Advice</div>
+
                 </div>
             </div>
         </div>
