--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
     <div class="adv">
         <img src="https://static.thcdn.com/images/xlarge/webp/widgets/121-us/32/original-0308-STDCRE32346-SS-AH-SkinStore-Concierge-Banners-1180x200-084632.jpg" alt="" />
     </div>
-    
+
     <!-- footer start here -->
 
     <div id="footer">
@@ -950,7 +950,6 @@
 </html>
 
 <script>
-
     document.querySelector(".goToHomepage").addEventListener("click", goToHomepage);
 
     function goToHomepage() {
@@ -1036,7 +1035,7 @@
     }
     document.querySelector(".total-of-items").innerText = `${lengthofbagitems} items in your cart`;
     var subtotal = database.reduce(function(sum, el, i, arr) {
-        sum += el.price;
+        sum += Number(el.price);
         return sum;
     }, 0);
 
@@ -1063,7 +1062,7 @@
         var para = document.createElement("p");
         para.innerText = el.name;
         var price = document.createElement("p");
-        price.innerText = `$${el.price}`;
+        price.innerText = `$${Number(el.price)}`;
         var Qty = document.createElement("p");
         Qty.innerText = `Quantity : 1`;
 
