--- a/cart/cart.html
+++ b/cart/cart.html
@@ -142,7 +142,7 @@
                             <div class="login-then-show-name-div">
                                 <a class="login-then-show-name" id="style-class-improve">
                                     <a id="logoutuser">Logout</a>
-                                    <a href="../temp database/database.html">access database temp</a>
+                                    <!-- <a href="../temp database/database.html">access database temp</a> -->
                                 </a>
                             </div>
                         </div>
@@ -285,7 +285,8 @@
                         </div>
                     </div>
                     <div class="BAR">
-                        Hair
+                        <p id="hairlink">Hair</p>
+                        <!-- <link rel="stylesheet" href="../fragrance/Hair.html"> -->
                         <div class="drop">
                             <div class="outsideHair">
                                 <div class="inside">
