--- a/brands/anniversary.html
+++ b/brands/anniversary.html
@@ -13,8 +13,6 @@
 </head>
 <body>
     
-    <!-- Header start here  -->
-
     <div id="first">
         <div id="firstSub">
             <div id="country">us - USD</div>
@@ -197,8 +195,8 @@
     <div id="third">
         <div id="thirdInneer">
             <div id="brand-link">Brands</div>
-            <div>Anniversary Edit</div>
-            <div>Sale</div>
+            <div class="anniversaryLink">Anniversary Edit</div>
+            <div id="productSale">Sale</div>
             <div class="BAR">
                 Build a Routine
                 <div class="drop">
@@ -622,8 +620,7 @@
         15% off with code SS15 + Sunday Riley C.E.O. Vitamin C Rich Hydration Cream (worth $22) @ $130 | Shop now
     </div>
 
-
-<!-- Header end here -->
+    <!-- HEADER ENDS HERE -->
 
      <div class="container">
         <img src="https://static.thcdn.com/images/xlarge/webp/widgets/121-us/52/0225-STDCRE-32155-SS-BME-Skinstore-March-Photography-2022_Part_2-_Lookbook-BATCHING-SHOT_14-1180x450-024552.jpg"/>
@@ -779,14 +776,14 @@
         <img src="https://static.thcdn.com/images/small/webp/widgets/121-us/25/original-0225-STDCRE-32155-SS-BME-Skinstore-March-Photography-2022_Part_2-_Lookbook-BATCHING-SHOT_07-500x500-040625.jpg" alt="">
         <h1>Revive</h1>
         <p>RéVive uses Bio-Renewal Technology. which is a skin identical and ethically-created Epidermal Growth Factor</p>
-            <button class="btn2">SHOP THE BRAND</button>
+            <button>SHOP THE BRAND</button>
           </div>
 
           <div class="item" id="item1">
             <img src="https://static.thcdn.com/images/small/webp/widgets/121-us/39/original-0225-STDCRE-32155-SS-BME-Skinstore-March-Photography-2022_Part_2-_Lookbook-BATCHING-SHOT_08-500x500-040739.jpg" alt="">
             <h1>111SKIN</h1>
             <p>Founded by Dr. Yannis Alexandrides, a top plastic surgeon in London.111SKIN is the ultimate luxury, science-backed skin care brand.</p>
-                <button class="btn2">SHOP THE BRAND</button>
+                <button >SHOP THE BRAND</button>
               </div>
 
               <div class="item" id="item1">
@@ -1060,7 +1057,7 @@
             <div id="pay">
                 <div id="paySecure">Pay securely with</div>
                 <div class="payments">
-                    <img src="./img/pay.png" alt="" />
+                    <img src="../img/pay.png" alt="" />
                 </div>
             </div>
         </div>
