--- a/brands/sale.html
+++ b/brands/sale.html
@@ -15,8 +15,6 @@
 </head>
 <body>
 
-    <!-- Header start here  -->
-
     <div id="first">
         <div id="firstSub">
             <div id="country">us - USD</div>
@@ -199,8 +197,8 @@
     <div id="third">
         <div id="thirdInneer">
             <div id="brand-link">Brands</div>
-            <div>Anniversary Edit</div>
-            <div>Sale</div>
+            <div class="anniversaryLink">Anniversary Edit</div>
+            <div id="productSale">Sale</div>
             <div class="BAR">
                 Build a Routine
                 <div class="drop">
@@ -624,47 +622,7 @@
         15% off with code SS15 + Sunday Riley C.E.O. Vitamin C Rich Hydration Cream (worth $22) @ $130 | Shop now
     </div>
 
-    <div class="container3">
-
-   <div class="subhead">
-    <!-- <div id="box2" class="box">
-        <p>
-        15% off with code SS15 + Sunday Riley C.E.O. Vitamin C Rich Hydration Cream (worth $22) @ $130 | Shop now &gt;
-    </p>
-</div> -->
-    <div id="box3" class="box"><a href="">Home</a> /Sale</div>
-   </div>
-<!-- News latest box  start here -->
-<!-- <button><a href="cart.html">Go to Cart</a></button> -->
-   <div class="newlatestbox">
-       <div class="subboxlatest" id="subboxlates1">
-        <h1>Spring Sale - Up to 50% off!</h1>
-        <p>466 results</p>
-
-        <div class="smallsub">
-            <div class="inline">
-            <p>Shop up to 50% off best-selling brands like Grow Gorgeous, BABOR, Replenix & more!</p>
-            <br>
-         <p>Check out our featured offers page here, or our coupons page for all live offers here.</p>
-         <br>
-         <p>Plus, receive a Sunday Riley C.E.O. Vitamin C Rich Hydration Cream (worth $22) when you spend $130 or more on your purchase.</p>
-         <br>
-         </div>
-         <div class="chngpages">
-            <button class="btn" value="minus"><i class="fa-solid fa-angle-left"></i></button>
-            <button class="btn">1</button>
-            <button class="btn">2</button>
-            <button class="btn">3</button>
-            <p>..</p>
-            <button class="btn">4</button>
-            <button class="btn" value="plus"><i class="fa-solid fa-angle-right"></i></button>
-            
-         </div>
-        
-        </div>
-        <!-- News latest box Ended here  -->
-
-       </div>
+    <!-- HEADER ENDS HERE -->
        <!-- filter box start here -->
        <div class="subboxlatest" id="subboxlates2">
   
@@ -848,7 +806,7 @@
             <div id="pay">
                 <div id="paySecure">Pay securely with</div>
                 <div class="payments">
-                    <img src="./img/pay.png" alt="" />
+                    <img src="../img/pay.png" alt="" />
                 </div>
             </div>
         </div>
