--- a/brands/anniversary.html
+++ b/brands/anniversary.html
@@ -1074,21 +1074,21 @@
 <script>
 
 
-var slide = document.getElementById("slider");
-    var btn1 = document.getElementById("btn1");
-    var btn2 = document.getElementById("btn2");
+// var slide = document.getElementById("slider");
+//     var btn1 = document.getElementById("btn1");
+//     var btn2 = document.getElementById("btn2");
 
-    btn1.onclick = function() {
-        slide.style.transform = "translateX(0px)";
-        btn1.classList.add("active");
-        btn2.classList.remove("active");
-    };
+//     btn1.onclick = function() {
+//         slide.style.transform = "translateX(0px)";
+//         btn1.classList.add("active");
+//         btn2.classList.remove("active");
+//     };
 
-    btn2.onclick = function() {
-        slide.style.transform = "translateX(-100%)";
-        btn2.classList.add("active");
-        btn1.classList.remove("active");
-    };
+//     btn2.onclick = function() {
+//         slide.style.transform = "translateX(-100%)";
+//         btn2.classList.add("active");
+//         btn1.classList.remove("active");
+//     };
 
 
 const productContainers = [...document.querySelectorAll('.product-container')];
