--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
                 <span><i class="fa-solid fa-truck"></i></span> FREE US Shipping Over $49
             </div>
             <div>
-                <span><i class="fa-solid fa-dollar-sign"></i></span> Refer a Friend, Get $15
+                <span><i class="fa-solid fa-coins"></i></span> Refer a Friend, Get $15
             </div>
             <div>
                 <span><i class="fa-solid fa-dollar-sign"></i></span> New Customers Save 20% - Use Code NEWBIE
