--- a/brands/sale.html
+++ b/brands/sale.html
@@ -196,9 +196,9 @@
     <!-- <div id="border"></div> -->
     <div id="third">
         <div id="thirdInneer">
-            <div id="brand-link">Brands</div>
-            <div class="anniversaryLink">Anniversary Edit</div>
-            <div id="productSale">Sale</div>
+            <div id="brand-link"><a href="/brands/brands.html">Brands</a></div>
+            <div class="anniversaryLink"><a href="/brands/anniversary.html"> Anniversary Edit</a></div>
+            <div id="productSale"><a href="/brands/sale.html">Sale</a></div>
             <div class="BAR">
                 Build a Routine
                 <div class="drop">
