--- a/BodyBath/Bath & shower.html
+++ b/BodyBath/Bath & shower.html
@@ -891,8 +891,8 @@
                     <span>Account</span>
                     <div class="hover-down-box">
                         <div class="conditional-thin-if-not-login">
-                            <a href="./login/login.html">Login</a>
-                            <a href="./register/register.html">Register</a>
+                            <a href="../login/login.html">Login</a>
+                            <a href="../register/register.html">Register</a>
                         </div>
                         <div class="login-then-show-name-div">
                             <a class="login-then-show-name" id="style-class-improve">
