--- a/brands/brands.html
+++ b/brands/brands.html
@@ -125,8 +125,8 @@
                         <span>Account</span>
                         <div class="hover-down-box">
                             <div class="conditional-thin-if-not-login">
-                                <a href="./login/login.html">Login</a>
-                                <a href="./register/register.html">Register</a>
+                                <a href="../login/login.html">Login</a>
+                                <a href="../register/register.html">Register</a>
                             </div>
                             <div class="login-then-show-name-div">
                                 <a class="login-then-show-name" id="style-class-improve">
@@ -1400,11 +1400,11 @@
 </html>
 <script>
 
-document.querySelector(".goToHomepage").addEventListener("click", goToHomepage);
+// document.querySelector(".goToHomepage").addEventListener("click", goToHomepage);
 
-function goToHomepage() {
-    window.location = "../index.html"
-}
+// function goToHomepage() {
+//     window.location = "../index.html"
+// }
 
 // var slide = document.getElementById("slider");
 //     var btn1 = document.getElementById("btn1");
