--- a/fragrance/Fragrance.html
+++ b/fragrance/Fragrance.html
@@ -598,7 +598,7 @@
                     </div>
                 </div>
             </div>
-            <div><a href="/fragrance/Advice.html">Advice</a></div>
+            <div class="forpath"><a href="/fragrance/Advice.html">Advice</a></div>
 
 
 
